--- a/src/components/company-logos/_company-logos.scss
+++ b/src/components/company-logos/_company-logos.scss
@@ -25,5 +25,9 @@
       margin-bottom: 0;
       padding: 0 $spacing-horizontal;
     }
+
+    &--last {
+      margin-bottom: 0;
+    }
   }
 }
